// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpIcon renders correctly 1`] = `
<svg
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Up Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M16 0H0v16h16z"
    />
    <path
      d="M3.278 11.559a.75.75 0 0 1-1.057-1.063l5.263-5.24a.75.75 0 0 1 1.059.001l5.238 5.24a.75.75 0 0 1-1.06 1.06L8.01 6.846l-4.733 4.713z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;

exports[`UpIcon renders large correctly 1`] = `
<svg
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Up Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M23.8 1.133h-24v24h24z"
    />
    <path
      d="M20.525 17.919a.75.75 0 1 0 1.013-1.107l-9.252-8.47a.75.75 0 0 0-1.013 0l-9.243 8.47a.75.75 0 1 0 1.014 1.107l8.736-8.007 8.745 8.007z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;

exports[`UpIcon renders xSmall correctly 1`] = `
<svg
  height="12"
  viewBox="0 0 12 12"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Up Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    transform="translate(-.2 -.867)"
  >
    <rect
      height="12"
      rx="1"
      width="12"
      y="1"
    />
    <path
      d="M2.554 9.305a.75.75 0 1 1-1.066-1.056l3.986-4.023a.75.75 0 0 1 1.065 0l3.973 4.01a.75.75 0 0 1-1.066 1.056l-3.44-3.473-3.452 3.486z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;
